fixed bugs in LinkSelector init, added RNGs(not working)

--- a/simulations/omnetpp.ini
+++ b/simulations/omnetpp.ini
@@ -1,1 +1,10 @@
 [General]
+network = AerocomSys
+num-rngs = 3
+rng-class = omnetpp::cMersenneTwister
+**.PacketGenerator.rng-0 = 0
+**.LinkSelector.rng-1 = 1
+**.DataLink[0].rng-1 = 2
+**.DataLink[0].rng-2 = 1
+**.DataLink[1].rng-1 = 1
+**.DataLink[1].rng-2 = 2
