--- a/simulations/omnetpp.ini
+++ b/simulations/omnetpp.ini
@@ -4,7 +4,4 @@ num-rngs = 3
 rng-class = omnetpp::cMersenneTwister
 **.PacketGenerator.rng-0 = 0
 **.LinkSelector.rng-1 = 1
-**.DataLink[0].rng-1 = 2
-**.DataLink[0].rng-2 = 1
-**.DataLink[1].rng-1 = 1
-**.DataLink[1].rng-2 = 2
+**.DataLink[*].rng-0 = 0
