redo of the previous commit

--- a/simulations/omnetpp.ini
+++ b/simulations/omnetpp.ini
@@ -1,7 +1,24 @@
 [General]
 network = AerocomSys
+#repeat = 100
+#seed-set = ${repetition}
 num-rngs = 3
+**.size = 100
+**.minCapacity = 6000
+**.maxCapacity = 15000
+sim-time-limit = 100s
+#warmup-period = 10s
 rng-class = omnetpp::cMersenneTwister
+**.nDL = 1
+**.nAC = 1
 **.PacketGenerator.rng-0 = 0
 **.LinkSelector.rng-1 = 1
 **.DataLink[*].rng-0 = 0
+
+[Config non-monitoring-exponential]
+description = "aircraft in non-monitoring mode, new capacity selected with exponential distrbution"
+**.k = 0.1
+**.X = 0.7
+**.m = 1
+**.generationMode = 1
+**.operationMode = 0
