--- a/simulations/.qtenvrc
+++ b/simulations/.qtenvrc
@@ -1,6 +1,6 @@
 [General]
-last-configname=non-monitoring-lognormal
-last-runnumber=2
+last-configname=General
+last-runnumber=0
 
 [RunModeProfiles]
 fast-max-animation-speed=nan
