changed the way we compute service time, still to be checked

--- a/simulations/omnetpp.ini
+++ b/simulations/omnetpp.ini
@@ -1,6 +1,8 @@
 [General]
 network = AerocomSys
 repeat = 1
+#same repetitions of different runs have same seed
+seed-set = ${repetition}
 #seed-set = ${repetition}
 num-rngs = 3
 **.size = 100
@@ -9,6 +11,7 @@ num-rngs = 3
 sim-time-limit = 1000s
 #warmup-period = 10s
 rng-class = omnetpp::cMersenneTwister
+
 **.nDL = 5
 **.nAC = 1
 # generation time
@@ -35,7 +38,7 @@ description = "aircraft in non-monitoring mode, new capacity selected with logno
 
 [Config monitoring-exponential]
 description = "aircraft in monitoring mode, new capacity selected with exponential distrbution"
-**.k = ${0.002, 0.005, 0.008, 0.010}
+**.k = 1
 **.X = 0.0005
 **.m = 1
 **.exponentialMean = 1
