--- a/simulations/omnetpp.ini
+++ b/simulations/omnetpp.ini
@@ -8,7 +8,7 @@ num-rngs = 3
 **.size = 100
 **.minCapacity = 6000
 **.maxCapacity = 15000
-sim-time-limit = 1000s
+sim-time-limit = 100s
 #warmup-period = 10s
 rng-class = omnetpp::cMersenneTwister
 
@@ -21,16 +21,20 @@ rng-class = omnetpp::cMersenneTwister
 # distribution of t
 **.DataLink[*].rng-0 = 0
 
+# condizione l < u
+# 1/kMean < 1/sTime
+# sTime < Kmean
+
 [Config non-monitoring-exponential]
 description = "aircraft in non-monitoring mode, new capacity selected with exponential distrbution"
-**.k = 0.5
+**.kMean = 0.5
 **.exponentialMean = 1
 **.generationMode = 1
 **.operationMode = 1
 
 [Config non-monitoring-lognormal]
 description = "aircraft in non-monitoring mode, new capacity selected with lognormal distrbution"
-**.k = 0.5
+**.kMean = 0.5
 **.lognormalMean = 1
 **.lognormalStdev = 1
 **.generationMode = 0
@@ -38,8 +42,8 @@ description = "aircraft in non-monitoring mode, new capacity selected with logno
 
 [Config monitoring-exponential]
 description = "aircraft in monitoring mode, new capacity selected with exponential distrbution"
-**.k = 1
-**.X = 0.0005
+**.kMean = ${0.003, 0.005, 0.009, 0.13}
+**.X = 0.01
 **.m = 1
 **.exponentialMean = 1
 **.generationMode = 1
@@ -47,7 +51,7 @@ description = "aircraft in monitoring mode, new capacity selected with exponenti
 
 [Config monitoring-lognormal]
 description = "aircraft in monitoring mode, new capacity selected with lognormal distrbution"
-**.k = 0.5
+**.kMean = 0.5
 **.X = 0.05
 **.m = 1
 **.lognormalMean = 1
