--- a/src/omnetpp.ini
+++ b/src/omnetpp.ini
@@ -1,6 +1,6 @@
 [General]
 network = AerocomSys
-repeat = 1
+repeat = 10
 #same repetitions of different runs have same seed
 seed-set = ${repetition}
 num-rngs = 3
@@ -8,7 +8,7 @@ num-rngs = 3
 **.minCapacity = 6000
 **.maxCapacity = 15000
 sim-time-limit = 100s
-#warmup-period = 10s
+warmup-period = 10s
 rng-class = omnetpp::cMersenneTwister
 
 **.nDL = 5
@@ -26,14 +26,14 @@ rng-class = omnetpp::cMersenneTwister
 
 [Config non-monitoring-exponential]
 description = "aircraft in non-monitoring mode, new capacity selected with exponential distrbution"
-**.kMean = 0.5
+**.kMean = 0.05
 **.exponentialMean = 1
 **.generationMode = 1
 **.operationMode = 1
 
 [Config non-monitoring-lognormal]
 description = "aircraft in non-monitoring mode, new capacity selected with lognormal distrbution"
-**.kMean = 0.5
+**.kMean = 0.05
 **.lognormalMean = 1
 **.lognormalStdev = 1
 **.generationMode = 0
@@ -41,20 +41,24 @@ description = "aircraft in non-monitoring mode, new capacity selected with logno
 
 [Config monitoring-exponential]
 description = "aircraft in monitoring mode, new capacity selected with exponential distrbution"
-**.kMean = ${0.003, 0.005, 0.009, 0.13}
+**.kMean = ${0.003,0.005,0.009,0.02,0.05}
 **.X = 0.01
 **.m = 1
+#sim-time-limit = ${10s,40s,100s,200s,300s,400s}
+#**.m = ${0.5,0.8,0.2,0.1,0.4,1,1.5}
+#**.exponentialMean = ${0.8,1.2,1.5}
 **.exponentialMean = 1
 **.generationMode = 1
 **.operationMode = 0
 
 [Config monitoring-lognormal]
 description = "aircraft in monitoring mode, new capacity selected with lognormal distrbution"
-**.kMean = 0.5
-**.X = 0.05
+**.kMean = 0.05
+**.X = 0.01
 **.m = 1
-**.lognormalMean = 1
-**.lognormalStdev = 1
-**.generationMode = 0
+sim-time-limit = ${10s,40s,100s,200s,300s,400s}
+**.lognormalMean = 1.2
+**.lognormalStdev = 0.8
+**.generationMode = 1
 **.operationMode = 0
 
