--- a/simulations/omnetpp.ini
+++ b/simulations/omnetpp.ini
@@ -1,13 +1,13 @@
 [General]
 network = AerocomSys
-repeat = 10
+repeat = 1
 #same repetitions of different runs have same seed
 seed-set = ${repetition}
 num-rngs = 3
 **.size = 100
 **.minCapacity = 6000
 **.maxCapacity = 15000
-sim-time-limit = 100s
+sim-time-limit = 300s
 warmup-period = 10s
 rng-class = omnetpp::cMersenneTwister
 
@@ -41,10 +41,11 @@ description = "aircraft in non-monitoring mode, new capacity selected with logno
 
 [Config monitoring-exponential]
 description = "aircraft in monitoring mode, new capacity selected with exponential distrbution"
-**.kMean = ${0.003,0.005,0.009,0.02,0.05}
+#**.kMean = ${0.003,0.005,0.009,0.02,0.05}
+**.kMean = 0.05
 **.X = 0.01
 **.m = 1
-#sim-time-limit = ${10s,40s,100s,200s,300s,400s}
+sim-time-limit = ${10s,40s,100s,200s,300s,400s,500s,600s,700s}
 #**.m = ${0.5,0.8,0.2,0.1,0.4,1,1.5}
 #**.exponentialMean = ${0.8,1.2,1.5}
 **.exponentialMean = 1
