--- a/simulations/omnetpp.ini
+++ b/simulations/omnetpp.ini
@@ -27,28 +27,31 @@ rng-class = omnetpp::cMersenneTwister
 [Config non-monitoring-exponential]
 description = "aircraft in non-monitoring mode, new capacity selected with exponential distrbution"
 **.kMean = 0.05
-**.exponentialMean = 1
+**.exponentialMean = ${0.8,1.2,1.5}
 **.generationMode = 1
 **.operationMode = 1
 
 [Config non-monitoring-lognormal]
 description = "aircraft in non-monitoring mode, new capacity selected with lognormal distrbution"
 **.kMean = 0.05
-**.lognormalMean = 1
-**.lognormalStdev = 1
+**.lognormalMean = ${0.8,1.2,1.5}
+**.lognormalStdev = ${0.5, 0.8, 1, 1.5}
 **.generationMode = 0
 **.operationMode = 1
 
 [Config monitoring-exponential]
 description = "aircraft in monitoring mode, new capacity selected with exponential distrbution"
+#stability test
 #**.kMean = ${0.003,0.005,0.009,0.02,0.05}
+# conitnuity test
+#**.kMean = 0.05+${repetition}*0.001
 **.kMean = 0.05
 **.X = 0.01
 **.m = 1
-sim-time-limit = ${10s,40s,100s,200s,300s,400s,500s,600s,700s}
+#sim-time-limit = ${10s,40s,100s,200s,300s,400s,500s,600s,700s}
 #**.m = ${0.5,0.8,0.2,0.1,0.4,1,1.5}
-#**.exponentialMean = ${0.8,1.2,1.5}
-**.exponentialMean = 1
+**.exponentialMean = ${0.8,1.2,1.5}
+#**.exponentialMean = 1
 **.generationMode = 1
 **.operationMode = 0
 
@@ -57,9 +60,9 @@ description = "aircraft in monitoring mode, new capacity selected with lognormal
 **.kMean = 0.05
 **.X = 0.01
 **.m = 1
-sim-time-limit = ${10s,40s,100s,200s,300s,400s}
-**.lognormalMean = 1.2
-**.lognormalStdev = 0.8
+#sim-time-limit = ${10s,40s,100s,200s,300s,400s}
+**.lognormalMean = ${0.8,1.2,1.5}
+**.lognormalStdev = ${0.5, 0.8, 1, 1.5}
 **.generationMode = 1
 **.operationMode = 0
 
