--- a/simulations/omnetpp.ini
+++ b/simulations/omnetpp.ini
@@ -27,7 +27,8 @@ rng-class = omnetpp::cMersenneTwister
 [Config non-monitoring-exponential]
 description = "aircraft in non-monitoring mode, new capacity selected with exponential distrbution"
 **.kMean = 0.05
-**.exponentialMean = ${0.8,1.2,1.5}
+#**.exponentialMean = ${0.8,1.2,1.5}
+**.exponentialMean = 1
 **.generationMode = 1
 **.operationMode = 1
 
@@ -46,23 +47,27 @@ description = "aircraft in monitoring mode, new capacity selected with exponenti
 # conitnuity test
 #**.kMean = 0.05+${repetition}*0.001
 **.kMean = 0.05
-**.X = 0.01
+#vary X test
+#**.X = ${0.01,0.03,0.05,0.1,0.2}
+**.X = 0.1
 **.m = 1
 #sim-time-limit = ${10s,40s,100s,200s,300s,400s,500s,600s,700s}
 #**.m = ${0.5,0.8,0.2,0.1,0.4,1,1.5}
-**.exponentialMean = ${0.8,1.2,1.5}
-#**.exponentialMean = 1
+#**.exponentialMean = ${0.8,1.2,1.5}
+**.exponentialMean = 1
 **.generationMode = 1
 **.operationMode = 0
 
 [Config monitoring-lognormal]
 description = "aircraft in monitoring mode, new capacity selected with lognormal distrbution"
 **.kMean = 0.05
-**.X = 0.01
+#**.X = 0.01
+#vary X test
+**.X = ${0.002,0.005,0.01,0.03,0.05,0.1,0.2}
 **.m = 1
 #sim-time-limit = ${10s,40s,100s,200s,300s,400s}
-**.lognormalMean = ${0.8,1.2,1.5}
-**.lognormalStdev = ${0.5, 0.8, 1, 1.5}
+**.lognormalMean = 1 #${0.8,1.2,1.5}
+**.lognormalStdev = 2# ${0.5, 0.8, 1, 1.5}
 **.generationMode = 1
 **.operationMode = 0
 
