refractoring omnetpp.ini

--- a/simulations/omnetpp.ini
+++ b/simulations/omnetpp.ini
@@ -1,6 +1,6 @@
 [General]
 network = AerocomSys
-repeat = 1
+repeat = 10
 #same repetitions of different runs have same seed
 seed-set = ${repetition}
 num-rngs = 3
@@ -11,8 +11,13 @@ sim-time-limit = 300s
 warmup-period = 10s
 rng-class = omnetpp::cMersenneTwister
 
-**.nDL = 5
+**.nDL = 15
 **.nAC = 1
+#**.kMean = 0.05
+#stability test
+#**.kMean = ${0.003,0.005,0.009,0.02,0.05}
+# conitnuity test
+**.kMean = 0.05+${repetition}*0.001
 # generation time
 **.PacketGenerator.rng-0 = 0
 # selection of the DL in the non-monitoring time
@@ -26,7 +31,7 @@ rng-class = omnetpp::cMersenneTwister
 
 [Config non-monitoring-exponential]
 description = "aircraft in non-monitoring mode, new capacity selected with exponential distrbution"
-**.kMean = 0.05
+#**.kMean = 0.05
 #**.exponentialMean = ${0.8,1.2,1.5}
 **.exponentialMean = 1
 **.generationMode = 1
@@ -34,7 +39,6 @@ description = "aircraft in non-monitoring mode, new capacity selected with expon
 
 [Config non-monitoring-lognormal]
 description = "aircraft in non-monitoring mode, new capacity selected with lognormal distrbution"
-**.kMean = 0.05
 **.lognormalMean = ${0.8,1.2,1.5}
 **.lognormalStdev = ${0.5, 0.8, 1, 1.5}
 **.generationMode = 0
@@ -42,17 +46,10 @@ description = "aircraft in non-monitoring mode, new capacity selected with logno
 
 [Config monitoring-exponential]
 description = "aircraft in monitoring mode, new capacity selected with exponential distrbution"
-#stability test
-#**.kMean = ${0.003,0.005,0.009,0.02,0.05}
-# conitnuity test
-#**.kMean = 0.05+${repetition}*0.001
-**.kMean = 0.05
 #vary X test
-#**.X = ${0.01,0.03,0.05,0.1,0.2}
-**.X = 0.1
-**.m = 1
-#sim-time-limit = ${10s,40s,100s,200s,300s,400s,500s,600s,700s}
-#**.m = ${0.5,0.8,0.2,0.1,0.4,1,1.5}
+**.X = ${0.01,0.03,0.05,0.1,0.2, 0.3, 0.4}
+#**.X = 0.01
+#**.m = 1
 #**.exponentialMean = ${0.8,1.2,1.5}
 **.exponentialMean = 1
 **.generationMode = 1
@@ -60,14 +57,13 @@ description = "aircraft in monitoring mode, new capacity selected with exponenti
 
 [Config monitoring-lognormal]
 description = "aircraft in monitoring mode, new capacity selected with lognormal distrbution"
-**.kMean = 0.05
-#**.X = 0.01
+**.X = 0.1
 #vary X test
-**.X = ${0.002,0.005,0.01,0.03,0.05,0.1,0.2}
-**.m = 1
+#**.X = ${0.01,0.03,0.05,0.1,0.2, 0.3, 0.4}
+#**.m = 1
 #sim-time-limit = ${10s,40s,100s,200s,300s,400s}
 **.lognormalMean = 1 #${0.8,1.2,1.5}
-**.lognormalStdev = 2# ${0.5, 0.8, 1, 1.5}
+**.lognormalStdev = 1.5# ${0.5, 0.8, 1, 1.5}
 **.generationMode = 0
 **.operationMode = 0
 
