refractoring omnetpp.ini

--- a/simulations/omnetpp.ini
+++ b/simulations/omnetpp.ini
@@ -1,6 +1,6 @@
 [General]
 network = AerocomSys
-repeat = 10
+repeat = 1
 #same repetitions of different runs have same seed
 seed-set = ${repetition}
 num-rngs = 3
@@ -13,11 +13,11 @@ rng-class = omnetpp::cMersenneTwister
 
 **.nDL = 15
 **.nAC = 1
-#**.kMean = 0.05
+**.kMean = 0.05
 #stability test
 #**.kMean = ${0.003,0.005,0.009,0.02,0.05}
 # conitnuity test
-**.kMean = 0.05+${repetition}*0.001
+#**.kMean = 0.05+${repetition}*0.001
 # generation time
 **.PacketGenerator.rng-0 = 0
 # selection of the DL in the non-monitoring time
@@ -31,7 +31,6 @@ rng-class = omnetpp::cMersenneTwister
 
 [Config non-monitoring-exponential]
 description = "aircraft in non-monitoring mode, new capacity selected with exponential distrbution"
-#**.kMean = 0.05
 #**.exponentialMean = ${0.8,1.2,1.5}
 **.exponentialMean = 1
 **.generationMode = 1
