--- a/simulations/omnetpp.ini
+++ b/simulations/omnetpp.ini
@@ -1,6 +1,6 @@
 [General]
 network = AerocomSys
-repeat = 1
+repeat = 10
 #same repetitions of different runs have same seed
 seed-set = ${repetition}
 num-rngs = 3
@@ -11,7 +11,7 @@ sim-time-limit = 300s
 warmup-period = 10s
 rng-class = omnetpp::cMersenneTwister
 
-**.nDL = 5
+**.nDL = 15
 **.nAC = 1
 # generation time
 **.PacketGenerator.rng-0 = 0
@@ -27,7 +27,7 @@ rng-class = omnetpp::cMersenneTwister
 [Config non-monitoring-exponential]
 description = "aircraft in non-monitoring mode, new capacity selected with exponential distrbution"
 **.kMean = 0.05
-**.exponentialMean = ${0.8,1.2,1.5}
+**.exponentialMean = 1 #${0.8,1.2,1.5}
 **.generationMode = 1
 **.operationMode = 1
 
@@ -50,7 +50,7 @@ description = "aircraft in monitoring mode, new capacity selected with exponenti
 **.m = 1
 #sim-time-limit = ${10s,40s,100s,200s,300s,400s,500s,600s,700s}
 #**.m = ${0.5,0.8,0.2,0.1,0.4,1,1.5}
-**.exponentialMean = ${0.8,1.2,1.5}
+**.exponentialMean = 1 #${0.8,1.2,1.5}
 #**.exponentialMean = 1
 **.generationMode = 1
 **.operationMode = 0
