--- a/simulations/omnetpp.ini
+++ b/simulations/omnetpp.ini
@@ -6,7 +6,7 @@ num-rngs = 3
 **.size = 100
 **.minCapacity = 6000
 **.maxCapacity = 15000
-#sim-time-limit = ${10s,40s,100s,200s,300s,400s}
+#sim-time-limit = ${500s,600s,700s}
 sim-time-limit = 300s
 warmup-period = 10s
 rng-class = omnetpp::cMersenneTwister
@@ -34,8 +34,8 @@ description = "aircraft in non-monitoring mode, new capacity selected with expon
 
 [Config non-monitoring-lognormal]
 description = "aircraft in non-monitoring mode, new capacity selected with lognormal distrbution"
-**.lognormalMean = ${0.8,1.2,1.5}
-**.lognormalStdev = ${0.5, 0.8, 1, 1.5}
+**.lognormalMean = 1 #${0.8,1.2,1.5}
+**.lognormalStdev = 1.5# ${0.5, 0.8, 1, 1.5}
 **.generationMode = 0
 **.operationMode = 1
 
@@ -43,7 +43,7 @@ description = "aircraft in non-monitoring mode, new capacity selected with logno
 description = "aircraft in monitoring mode, new capacity selected with exponential distrbution"
 #vary X test
 #**.X = ${0.01,0.03,0.05,0.1,0.2, 0.3, 0.4}
-**.X = 0.01
+**.X = 0.1
 #**.exponentialMean = ${0.8,1.2,1.5}
 **.exponentialMean = 1
 **.generationMode = 1
