--- a/simulations/omnetpp.ini
+++ b/simulations/omnetpp.ini
@@ -1,6 +1,6 @@
 [General]
 network = AerocomSys
-repeat = 1
+repeat = 10
 seed-set = ${repetition}
 num-rngs = 3
 **.size = 100
@@ -13,11 +13,11 @@ rng-class = omnetpp::cMersenneTwister
 
 **.nDL = 15
 **.nAC = 1
-**.kMean = 0.05
+#**.kMean = 0.05
 #stability test
 #**.kMean = ${0.003,0.005,0.009,0.02,0.05}
 # conitnuity test
-#**.kMean = 0.05+${repetition}*0.001
+**.kMean = 0.05+${repetition}*0.001
 # generation time
 **.PacketGenerator.rng-0 = 0
 # selection of the DL in the non-monitoring time
