--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 #
-# OMNeT++/OMNEST Makefile for AerocomSystem_nuovo
+# OMNeT++/OMNEST Makefile for AerocomSystem2
 #
 # This file was generated with the command:
 #  opp_makemake -f --deep
@@ -7,7 +7,7 @@
 
 # Name of target to be created (-o option)
 TARGET_DIR = .
-TARGET_NAME = AerocomSystem_nuovo$(D)
+TARGET_NAME = AerocomSystem2$(D)
 TARGET = $(TARGET_NAME)$(EXE_SUFFIX)
 TARGET_IMPLIB = $(TARGET_NAME)$(IMPLIB_SUFFIX)
 TARGET_IMPDEF = $(TARGET_NAME)$(IMPDEF_SUFFIX)
